--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">WangYiNews</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="tab_titles">
+        <item>头条</item>
+        <item>娱乐</item>
+        <item>热点</item>
+        <item>本地</item>
+        <item>财经</item>
+        <item>科技</item>
+        <item>汽车</item>
+    </string-array>
 </resources>
